// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricVisComponent should render correct structure for single metric 1`] = `
<div
  className="mtrVis"
>
  <MetricVisValue
    key="0"
    metric={
      Object {
        "bgColor": undefined,
        "color": undefined,
        "label": "Count",
        "lightText": false,
        "rowIndex": 0,
        "value": "<span ng-non-bindable>4301021</span>",
      }
    }
    showLabel={true}
  />
</div>
`;

exports[`MetricVisComponent should render correct structure for multi-value metrics 1`] = `
<div
  className="mtrVis"
>
  <MetricVisValue
    key="0"
    metric={
      Object {
        "bgColor": undefined,
        "color": undefined,
        "label": "1st percentile of bytes",
        "lightText": false,
        "rowIndex": 0,
        "value": "<span ng-non-bindable>182</span>",
      }
    }
    showLabel={true}
  />
  <MetricVisValue
    key="1"
    metric={
      Object {
        "bgColor": undefined,
        "color": undefined,
        "label": "99th percentile of bytes",
        "lightText": false,
        "rowIndex": 0,
        "value": "<span ng-non-bindable>445842.4634666484</span>",
      }
    }
    showLabel={true}
  />
</div>
`;
